fixed the global session guard by adding the Public decorator and check it

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://nakhiluser:1234@192.168.1.186:5432/authdbsession?schema=public"
+PASSWORD="password"
