--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "connect-redis": "^6.1.3",
     "express-session": "^1.17.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "redis": "^4.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -43,6 +45,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/connect-redis": "^0.0.19",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
     "@types/jest": "28.1.8",
